# SigurScan

./: .gitignore  HANDOFF_TO_CLAUDE_CODE.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  sigurscan_whisper_jni.cpp
backend/: .dockerignore  .env.example  .gcloudignore  .vercelignore  Dockerfile  api_models.py  app.py  config.py  main.py  main_runtime.py  requirements.txt  runtime_state.py  test_anaf_cui.py  test_artifact_envelope.py  test_audio_evidence.py  test_b2b_invoice_safe_controls.py  test_b2b_invoice_signals.py  test_backend.py  test_bank_credential_phish.py  test_brand_registry.py  test_brand_truth_registry.py  test_cfx_engine.py  test_comprehensive_invoices.py  test_container_contract.py  test_cross_scan_knowledge.py  test_dns_reputation.py  test_efactura_xml.py  test_email_link_extraction.py  test_evaluation_metrics.py  test_evidence_gate_golden.py  test_fake_security_app_install.py  test_hunter_io.py  test_iban_validator.py  test_impersonation_knowledge_builder.py  test_inbox_provenance.py  test_invoice_coherence.py  test_invoice_endpoint.py  test_invoice_fraud_detection.py  test_invoice_iban_research.py  test_invoice_orchestration.py  (+42 more)
docs/: ACCEPTANCE_TESTS_ROMANIA.md  ANDROID_AUDIO_CAPTURE_POLICY_2026-06-14.md  ANDROID_IOS_PARITY_AUDIT.md  ANDROID_MATURITY_REQUIREMENTS.md  API_SECURITY.md  CLOUD_RUN_MIGRATION_PLAN.md  CODEX_8PM_RESEARCH_EXECUTION_RESULT.md  DECISION_CONTRACT_V1.md  E2E_EMULATOR_RESULTS_2026-06-03.md  E2E_FIXTURE_EVAL_RESULTS_2026-06-04.md  E2E_FIXTURE_PACK_INTEGRATION.md  (+30 more)
(+2750 files in other folders)
